--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (<ipython-input-3-2f1d02773391>, line 2)",
+     "evalue": "invalid syntax (<ipython-input-4-0c16c16bfe4f>, line 2)",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-3-2f1d02773391>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def number_of_destinations(len(travel_destinations)):\u001b[0m\n\u001b[0m                                  ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-4-0c16c16bfe4f>\"\u001b[0;36m, line \u001b[0;32m2\u001b[0m\n\u001b[0;31m    def number_of_destinations=list(range(len(travel_destinations)):\u001b[0m\n\u001b[0m                              ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
