--- a/index.ipynb
+++ b/index.ipynb
@@ -66,7 +66,7 @@
    ],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
-    "def number_of_destinationslist(range(len(trave:\n",
+    "def number_of_destinationslist ():\n",
     "    pass"
    ]
   },
