--- a/index.ipynb
+++ b/index.ipynb
@@ -67,8 +67,8 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def number_of_destinations():\n",
-    "    \n",
-    "    pass len(travel_destinations)"
+    "    print len(travel_des)\n",
+    "    pass"
    ]
   },
   {
