--- a/index.ipynb
+++ b/index.ipynb
@@ -148,6 +148,7 @@
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
+    "    print(favorite_destination)\n",
     "    pass"
    ]
   },
