--- a/index.ipynb
+++ b/index.ipynb
@@ -142,21 +142,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    print(favorite_destination)\n",
+    "    travel_destinations.append\n",
+    "    print(\"madagascar\")\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "madagascar\n"
+     ]
+    }
+   ],
    "source": [
     "favorite_destination() # 'madagascar'"
    ]
