--- a/index.ipynb
+++ b/index.ipynb
@@ -142,20 +142,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def favorite_destination():\n",
-    "    travel_destinations.append\n",
-    "    print(\"madagascar\")\n",
+    "    travel_destinations.append(\"madagascar\")\n",
+    "    print(travel_destinations[-1])\n",
     "    pass"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
