--- a/index.ipynb
+++ b/index.ipynb
@@ -222,7 +222,7 @@
     "travel_destinations = ['argentina', 'mexico', 'italy', 'finland', 'canada', 'croatia']\n",
     "def capitalize_countries():\n",
     "    for i in travel_destinations:\n",
-    "        i=\n",
+    "        travel_destinations[i]=travel_destinations[i].title\n",
     "    pass"
    ]
   },
